[project]
name = "hablog"
version = "0.1.0"
description = "A lightweight CLI tool for tracking work sessions and projects, designed to reduce decision fatigue and help maintain focus."
requires-python = ">=3.9"
authors = [{name = "Sashank Niraula (thehaudedai)"}]
dependencies = [
    "typer>=0.20.0",
    "rich>=14.2.0",
    "dateparser>=1.3.0",
    "python-dateutil>=2.9.0"
]
readme = "README.md"
license = {text = "TBD"}
keywords = ["cli", "productivity", "focus", "session-tracking", "ADHD"]

[project.scripts]
hablog = "hablog.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"